--- a/Matrix-iterative-NVAR.ipynb
+++ b/Matrix-iterative-NVAR.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
        "       [0, 0, 0, 0, 0, 0, 0, 0]], dtype=object)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,14 +101,14 @@
     {
      "data": {
       "text/plain": [
-       "array([[w1*x1 + w2*x2 + w3*x3 + w4*x4, x1, x2, x3, 0, 0, 0, 0],\n",
-       "       [w1*x1 + w2*x2 + w3*x3 + w4*x4, x1, x2, x3, 0, 0, 0, 0],\n",
-       "       [w1*x1 + w2*x2 + w3*x3 + w4*x4, x1, x2, x3, 0, 0, 0, 0],\n",
-       "       [w1*x1 + w2*x2 + w3*x3 + w4*x4, x1, x2, x3, 0, 0, 0, 0],\n",
-       "       [w1*x1 + w2*x2 + w3*x3 + w4*x4, x1, x2, x3, 0, 0, 0, 0],\n",
-       "       [w1*x1 + w2*x2 + w3*x3 + w4*x4, x1, x2, x3, 0, 0, 0, 0],\n",
-       "       [w1*x1 + w2*x2 + w3*x3 + w4*x4, x1, x2, x3, 0, 0, 0, 0],\n",
-       "       [w1*x1 + w2*x2 + w3*x3 + w4*x4, x1, x2, x3, 0, 0, 0, 0]], dtype=object)"
+       "array([[w1*x1 + w2*x2 + w3*x3 + w4*x4 + w5*x1**2 + w6*x2**2 + w7*x3**2 + w8*x4**2, x1, x2, x3, 0, 0, 0, 0],\n",
+       "       [w1*x1 + w2*x2 + w3*x3 + w4*x4 + w5*x1**2 + w6*x2**2 + w7*x3**2 + w8*x4**2, x1, x2, x3, 0, 0, 0, 0],\n",
+       "       [w1*x1 + w2*x2 + w3*x3 + w4*x4 + w5*x1**2 + w6*x2**2 + w7*x3**2 + w8*x4**2, x1, x2, x3, 0, 0, 0, 0],\n",
+       "       [w1*x1 + w2*x2 + w3*x3 + w4*x4 + w5*x1**2 + w6*x2**2 + w7*x3**2 + w8*x4**2, x1, x2, x3, 0, 0, 0, 0],\n",
+       "       [w1*x1 + w2*x2 + w3*x3 + w4*x4 + w5*x1**2 + w6*x2**2 + w7*x3**2 + w8*x4**2, x1, x2, x3, 0, 0, 0, 0],\n",
+       "       [w1*x1 + w2*x2 + w3*x3 + w4*x4 + w5*x1**2 + w6*x2**2 + w7*x3**2 + w8*x4**2, x1, x2, x3, 0, 0, 0, 0],\n",
+       "       [w1*x1 + w2*x2 + w3*x3 + w4*x4 + w5*x1**2 + w6*x2**2 + w7*x3**2 + w8*x4**2, x1, x2, x3, 0, 0, 0, 0],\n",
+       "       [w1*x1 + w2*x2 + w3*x3 + w4*x4 + w5*x1**2 + w6*x2**2 + w7*x3**2 + w8*x4**2, x1, x2, x3, 0, 0, 0, 0]], dtype=object)"
       ]
      },
      "execution_count": 4,
@@ -139,7 +139,7 @@
     {
      "data": {
       "text/plain": [
-       "array([[0, 0, 0, 0, w1*x1 + w2*x2 + w3*x3 + w4*x4, x1, x2, x3],\n",
+       "array([[0, 0, 0, 0, w1*x1 + w2*x2 + w3*x3 + w4*x4 + w5*x1**2 + w6*x2**2 + w7*x3**2 + w8*x4**2, x1, x2, x3],\n",
        "       [0, 0, 0, 0, 0, 0, 0, 0],\n",
        "       [0, 0, 0, 0, 0, 0, 0, 0],\n",
        "       [0, 0, 0, 0, 0, 0, 0, 0],\n",
@@ -181,7 +181,7 @@
        "       [0, 0, 0, 0, 0, 0, 0, 0],\n",
        "       [0, 0, 0, 0, 0, 0, 0, 0],\n",
        "       [0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, w1*x1 + w2*x2 + w3*x3 + w4*x4, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, w1*x1 + w2*x2 + w3*x3 + w4*x4 + w5*x1**2 + w6*x2**2 + w7*x3**2 + w8*x4**2, 0, 0, 0],\n",
        "       [0, 0, 0, 0, 0, x1, 0, 0],\n",
        "       [0, 0, 0, 0, 0, 0, x2, 0],\n",
        "       [0, 0, 0, 0, 0, 0, 0, x3]], dtype=object)"
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
        "       [0, 0, 0, 0, 0, 0, 0, 0]], dtype=object)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
